Eliminazione degli A capo

--- a/src/progettazioneLogica/schema_relazionale.tex
+++ b/src/progettazioneLogica/schema_relazionale.tex
@@ -5,7 +5,8 @@
 				\toprule
 				\rowcolor[rgb]{.929, .929, .929} \textbf{BottiglieDiVino} (\underline{Id}, Vino, Annata, Prezzo, NumBottiglieVendute, NumBottiglieMagazzino, NumBottiglieProdotte, IdTappo, IdBottiglia, IdMagazzino) \\
 				\midrule
-				(BottiglieDiVino.Vino, BottiglieDiVino.Annata) $\to$ (Vini.Nome, Vini.Uva.Annata)*                                                                                                                                     \\
+				(BottiglieDiVino.Vino, BottiglieDiVino.Annata) $\to$ (Vini.Nome, Vini.Uva.Annata)*
+				\\
 				\midrule
 				BottiglieDiVino.IdTappo $\to$ Tappi.Id                                                                                                                                                                                 \\
 				\midrule
@@ -13,7 +14,8 @@
 				\midrule
 				BottiglieDiVino.IdMagazzino $\to$ LineeProduttive.Id                                                                                                                                                                   \\                                  
 				\midrule
-				\rowcolor[rgb]{.929, .929, .929} \textbf{Vini} (\underline{Nome}, GradazioneAlcolica, TempoFermentazione, StatoProduzione, Uva, Classificazione)                                                                                        \\
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Vini} (\underline{Nome}, GradazioneAlcolica, TempoFermentazione, StatoProduzione, Uva, Classificazione)
+				\\
 				\midrule
 				Vini.Uva $\to$ Uva.Id                                                                                                                                                                                                  \\
 				\midrule
@@ -38,7 +40,8 @@
 				\midrule
 				Vigneti.TipoUva $\to$ TipiUva.Nome                                                                          \\                                
 				\midrule
-				\rowcolor[rgb]{.929, .929, .929} \textbf{Tappi} (\underline{Id}, Forma, Materiale, Quantita, Fornitore)     \\
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Tappi} (\underline{Id}, Forma, Materiale, Quantita, Fornitore)
+				\\
 				\midrule
 				Tappi.Fornitore $\to$ Fornitori.Id                                                                          \\                                
 				\midrule
@@ -50,13 +53,15 @@
 				\midrule
 				FornituraUva.Uva $\to$ Uva.Id                                                                               \\                                
 				\midrule
-				\rowcolor[rgb]{.929, .929, .929} \textbf{TipiUva} (\underline{Nome}, Colore)                                                                           \\                                
+				\rowcolor[rgb]{.929, .929, .929} \textbf{TipiUva} (\underline{Nome}, Colore)
+				\\                                
 				\midrule
 				\rowcolor[rgb]{.929, .929, .929} \textbf{Corrieri} (\underline{Id}, Nome)                                                                              \\                                
 				\midrule
-				\rowcolor[rgb]{.929, .929, .929} \textbf{Eventi} (\underline{Id}, Titolo, Edizione)                                                                    \\
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Eventi} (\underline{Id}, Titolo, Edizione)                                                                   \\
 				\midrule
-				\rowcolor[rgb]{.929, .929, .929} \textbf{Acquirenti} (\underline{Id})                                                 \\        \midrule                        
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Acquirenti} (\underline{Id}) \\        
+				\midrule                        
 			\end{tabular}
 		}
 	\end{minipage}
@@ -68,29 +73,35 @@
 		\rightline{
 			\begin{tabular}{P{7.5cm}}
 				\toprule
-				\rowcolor[rgb]{.929, .929, .929} \textbf{FornituraTappi} (\underline{Tappo, DataAcquisto}, Prezzo, Quantita)          \\
+				\rowcolor[rgb]{.929, .929, .929} \textbf{FornituraTappi} (\underline{Tappo, DataAcquisto}, Prezzo, Quantita)
+				\\
 				\midrule
 				FornituraTappi.Tappo $\to$ Tappi.Id                                                                                   \\                               
 				\midrule
-				\rowcolor[rgb]{.929, .929, .929} \textbf{FornituraBottiglie} (\underline{Bottiglia, DataAcquisto}, Prezzo, Quantita)                                   \\
+				\rowcolor[rgb]{.929, .929, .929} \textbf{FornituraBottiglie} (\underline{Bottiglia, DataAcquisto}, Prezzo, Quantita)
+				\\
 				\midrule
 				FornituraBottiglie.Bottiglia $\to$ Bottiglie.Id                                                                                                        \\                                
 				\midrule
-				\rowcolor[rgb]{.929, .929, .929} \textbf{Dipendenti} (\underline{CodiceFiscale}, Nome, Cognome, Referente)            \\
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Dipendenti} (\underline{CodiceFiscale}, Nome, Cognome, Referente)
+				\\
 				\midrule
 				Dipendenti.Referente $\to$ Dipendenti.CodiceFiscale                                                                   \\                                
 				\midrule
-				\rowcolor[rgb]{.929, .929, .929} \textbf{Turni} (\underline{Dipendente, InizioTurno}, FineTurno, LineaProduttiva)                                      \\
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Turni} (\underline{Dipendente, InizioTurno}, FineTurno, LineaProduttiva)
+				\\
 				\midrule
 				Turni.Dipendente $\to$ Dipendenti.CodiceFiscale                                                                                                        \\
 				\midrule
 				Turni.LineaProduttiva $\to$ LineeProduttive.Id                                                                                                         \\                                
 				\midrule
-				\rowcolor[rgb]{.929, .929, .929} \textbf{Fornitori} (\underline{Id}, Tipologia)                                       \\
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Fornitori} (\underline{Id}, Tipologia)
+				\\
 				\midrule
 				Fornitori.Id $\to$ Aziende.PartitaIVA \\                                
 				\midrule
-				\rowcolor[rgb]{.929, .929, .929} \textbf{NegoziInterni} (\underline{Id})                                              \\
+				\rowcolor[rgb]{.929, .929, .929} \textbf{NegoziInterni} (\underline{Id})
+				\\
 				\midrule
 				NegoziInterni.Id $\to$ Aziende.PartitaIVA \\                                
 				\midrule
@@ -114,7 +125,6 @@
 				\midrule
 				Ordini.Acquirente $\to$ Acquirenti.Id                                                                                                                  \\                                
 				\midrule
-				
 			\end{tabular}
 		}
 	\end{minipage}
@@ -123,13 +133,15 @@
 		\rightline{
 			\begin{tabular}{P{7.5cm}}
 				\toprule
-				\rowcolor[rgb]{.929, .929, .929} \textbf{Manutenzioni} (\underline{Id}, Macchinario, Azienda, Costo, Data)            \\
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Manutenzioni} (\underline{Id}, Macchinario, Azienda, Costo, Data)
+				\\
 				\midrule
 				Manutenzioni.Macchinario $\to$ Macchinari.Id                                                                          \\
 				\midrule
 				Manutenzioni.Azienda $\to$ Aziende.PartitaIVA                                                                                 \\                                
 				\midrule
-				\rowcolor[rgb]{.929, .929, .929} \textbf{Macchinari} (\underline{Id}, Nome, DataProssimaManutenzione, DataAcquisto, LineaProduttiva)                   \\
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Macchinari} (\underline{Id}, Nome, DataProssimaManutenzione, DataAcquisto, LineaProduttiva)
+				\\
 				\midrule
 				Macchinari.LineaProduttiva $\to$ LineeProduttive.Id                                                                                                    \\                                
 				\midrule
@@ -139,17 +151,20 @@
 				\midrule
 				Dettagli.BottigliaDiVino $\to$ BottiglieDiVino.Id                                                                                \\                                
 				\midrule
-				\rowcolor[rgb]{.929, .929, .929} \textbf{LineeProduttive} (\underline{Id}, Nome, Direttore)                           \\
+				\rowcolor[rgb]{.929, .929, .929} \textbf{LineeProduttive} (\underline{Id}, Nome, Direttore)
+				\\
 				\midrule
 				LineeProduttive.Direttore $\to$ Dipendenti.CodiceFiscale                                                              \\                                
 				\midrule
-				\rowcolor[rgb]{.929, .929, .929} \textbf{Spedizioni} (\underline{Ordine, Corriere}, DataSpedizione, DataConsegna, Prezzo)                              \\
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Spedizioni} (\underline{Ordine, Corriere}, DataSpedizione, DataConsegna, Prezzo)
+				\\
 				\midrule
 				Spedizioni.Ordine $\to$ Ordini.Id                                                                                                                      \\
 				\midrule
 				Spedizioni.Corriere $\to$ Corrieri.Id                                                                                                                  \\                                
 				\midrule
-				\rowcolor[rgb]{.929, .929, .929} \textbf{Privati} (\underline{Id}, Cognome, InformazioniAggiuntive)                                                    \\
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Privati} (\underline{Id}, Cognome, InformazioniAggiuntive)
+				\\
 				\midrule
 				Privati.Id $\to$ Acquirenti.Id                                                                                                                         \\
 				\midrule
@@ -161,8 +176,8 @@
 				\midrule
 				Aziende.InformazioniAggiuntive $\to$ Informazioni.Id                                                                                                   \\                                
 				\midrule
-				\rowcolor[rgb]{.929, .929, .929} \textbf{Indirizzi} (\underline{Id}, Via, NumeroCivico, Stato, Provincia, Citta, CAP) \\
-				
+				\rowcolor[rgb]{.929, .929, .929} \textbf{Indirizzi} (\underline{Id}, Via, NumeroCivico, Stato, Provincia, Citta, CAP)
+				\\
 				\midrule
 			\end{tabular}
 		}
