Added screenshot to query3

--- a/src/queryIndici/query.tex
+++ b/src/queryIndici/query.tex
@@ -68,7 +68,8 @@
 		      AND Uva.Fornitore = Aziende.PartitaIVA
 		      AND Aziende.InformazioniAggiuntive = Informazioni.Id;
 			   &
-		      \\
+			   \raisebox{-\totalheight}{\includegraphics[width=0.47\textwidth , keepaspectratio]{src/queryIndici/assets/Query3.png}}
+			   \\
 		      \hline
 	      \end{tabularx}
 	\item \textbf{Lista dei dipendenti (ordinati in ordine alfabetico) che sono supervisori di altri dipendenti.}\\
